--- a/Console/Examen_final_taller/Examen_taller_esbaide/Examen_taller_esbaide/Examen_taller_esbaide.csproj
+++ b/Console/Examen_final_taller/Examen_taller_esbaide/Examen_taller_esbaide/Examen_taller_esbaide.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Servicios Financieros Sa de Cv.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Servicios Financieros Sa de Cv.Designer.cs">
+      <DependentUpon>Servicios Financieros Sa de Cv.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Servicios Financieros Sa de Cv.resx">
+      <DependentUpon>Servicios Financieros Sa de Cv.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
